--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/add-task/add.jsx", "src/app/page.tsx", "src/app/layout.tsx", "tailwind.config.ts", "next.config.js", "src/store/index.ts"],
   "exclude": ["node_modules"]
 }
